--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#services">"Skills"</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Factoids</a>
+                        <a class="page-scroll" href="#nothing">Nothing</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -76,7 +76,8 @@
             <div class="header-content-inner">
                 <h1>Born from the internet and now it's time to confront my origin.</h1>
                 <hr>
-                <p>Shrug?</p>
+                <h2>(not really)</h2>
+                <hr>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">IF you just said: "Eww, I'm sick of this picture" outloud</a>
             </div>
         </div>
@@ -86,10 +87,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">I'm Rob. Portland person.</h2>
+                    <h2 class="section-heading">I'm Rob. A Portland (people) person.</h2>
                     <hr class="light">
                     <p class="text-faded">I probably wish it was warmer right now</p>
-                    <a href="#" class="btn btn-default btn-xl">Heat it up!</a>
+                    <a href="http://forecast.io/#/f/45.5118,-122.6756" class="btn btn-default btn-xl">Gimmi the temps!</a>
                 </div>
             </div>
         </div>
@@ -99,8 +100,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Hi.</h2>
+                    <h2 class="section-heading">My skillset</h2>
                     <hr class="primary">
+                    <p class="text-muted">(click the icons to learn more)</p>
                 </div>
             </div>
         </div>
@@ -108,28 +110,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>???</h3>
-                        <p class="text-muted">more???</p>
+                        <a href="http://www.nytimes.com/2015/06/23/science/aphantasia-minds-eye-blind.html"><i class="fa fa-4x fa-eye-slash wow bounceIn text-primary"></i></a>
+                        <h3>Mind's Eye</h3>
+                        <p class="text-muted">I literally don't have one</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>I dunno</h3>
-                        <p class="text-muted">shrug</p>
+                        <a href="http://na.op.gg/summoner/userName=hellb%C3%AAnt"><i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".1s"></i></a>
+                        <h3>Gaming as medicine</h3>
+                        <p class="text-muted">Current League of Legends dork (Former CS 1.6 Semi-Pro)</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <a href="https://www.google.com/webhp?ion=1&espv=2&ie=UTF-8#q=5%20feet%2011%20inches"><i class="fa fa-4x fa-arrows-v wow bounceIn text-primary" data-wow-delay=".2s"></i></a>
                         <h3>I'm 5'11"</h3>
                         <p class="text-muted">Probably closer to 5'10"</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-github-alt wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Hairline steady</h3>
                         <p class="text-muted">I though I'd be bald by now, but I'm not</p>
                     </div>
@@ -138,94 +140,94 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="nothing">
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/1.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/2.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/3.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/4.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/5.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="assets/portfolio/6.jpg" class="img-responsive" alt="">
+                    <a href="#nothing" class="portfolio-box">
+                        <img src="assets/nothing/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Nothing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Something will go here
                                 </div>
                             </div>
                         </div>
@@ -239,7 +241,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>I work at New Relic</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">New Relic!</a>
+                <a href="http://www.newrelic.com" class="btn btn-default btn-xl wow tada">New Relic!</a>
             </div>
         </div>
     </aside>
@@ -248,18 +250,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Don't contact me at these:</h2>
+                    <h2 class="section-heading">Contact Info</h2>
                     <hr class="primary">
-                    <p>(email is actually just fine)</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>My voice mail haz been full for 4 years. not a joke.</p>
+                    <p></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:xbadbmx@gmail.com">xbadbmx at gmail dot com is the worst email in the world, but it's mine.</a></p>
+                    <a href="mailto:xbadbmx@gmail.com" i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a></i>
+                    <p>Possible the worst email handle, but it's mine.</a></p>
                 </div>
+                <div class="col-lg-4 text-center">
+                	<a href="https://www.facebook.com/rob.mcdonough" i class="fa fa-facebook fa-3x wow bounceIn"></a></i>
+                	<p>My Bernie Sanders 2016 soapbox</p>
+                </div>	
+                <div class="col-lg-4 text-center">
+                	<a href="https://www.linkedin.com/profile/view?id=AAIAAAzdOsQBxFyW2sYKBEnP_dlTz7QKeJ0_EaA" i class="fa fa-linkedin fa-3x wow bounceIn"></a></i>
+                	<p>Straight Business</p>
+                </div>	
             </div>
         </div>
     </section>
