--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #43A047;
     border-width: 3px;
 }
 
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #43A047;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -52,7 +52,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #43A047;
 }
 
 .bg-dark {
@@ -61,7 +61,7 @@ p {
 }
 
 .text-faded {
-    color: rgba(255,255,255,.7);
+    color: rgba(0,0,0,.7);
 }
 
 section {
@@ -94,7 +94,7 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: ##000000;
 }
 
 .navbar-default .nav > li>a,
@@ -102,17 +102,17 @@ aside {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: black;
+    color: #000000;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: ##000000;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #000000!important;
     background-color: transparent;
 }
 
@@ -124,11 +124,11 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
-        background-color: transparent;
+        background-color: rgba(67,160,71,.4);
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: rgba(255,255,255,.7);
+        color: rgba(0,0,0,.7);
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -138,7 +138,7 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
+        color: rgba(0,0,0,.7);
     }
 
     .navbar-default .nav > li>a:hover,
@@ -153,22 +153,22 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: black;
+        color: #000000;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: black;
+        color: #000000;
     }
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: black;
+        color: #000000;
     }
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: black;
+        color: #000000;
     }
 }
 
@@ -179,7 +179,7 @@ header {
     text-align: center;
     color: #fff;
     background-image: url(../assets/header.jpg);
-    background-position: center;
+    background-position: ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -198,6 +198,8 @@ header .header-content .header-content-inner h1 {
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 700;
+    color: rgba(255,255,255,.8);
+    border-color: rgba(67,160,71,.8);
 }
 
 header .header-content .header-content-inner hr {
@@ -323,7 +325,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #43A047;
 }
 
 .no-gutter > [class*=col-] {
@@ -385,9 +387,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #43A047;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #43A047;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -428,12 +430,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #43A047;
+    background-color: #43A047;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #43A047;
     background-color: #fff;
 }
 
