--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,288 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <style>
+body {
+    font-family: Helvetica, Arial, Sans-Serif;
+    color: #ffffff;
+    text-transform: uppercase;
+    
+    text-align: left;
+    background-color: #000000
+}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+h1 {
+font-size: 18pt;
 
-    <title>Is this is website for a coffee shop? A niche brick and mortar shop that sells things with wood and leather? Because it should be.</title>
+}
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+h2 {
+    font-size: 10pt;
+}
 
-    <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/creative.css" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+</style>
 </head>
 
-<body id="page-top">
+<body>
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Showered&SemiFormal</a>
-            </div>
+<h1>ROBERT + JESS MCDONOUGH</h1> 
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">"Skills"</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#nothing">Nothing</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-    <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1>Born from the internet and now it's time to confront my origin.</h1>
-                <hr>
-                <h2>(not really)</h2>
-                <hr>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">IF you just said: "Eww, I'm sick of this picture" outloud</a>
-            </div>
-        </div>
-    </header>
-
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">I'm Rob. A Portland (people) person.</h2>
-                    <hr class="light">
-                    <p class="text-faded">I probably wish it was warmer right now</p>
-                    <a href="http://forecast.io/#/f/45.5118,-122.6756" class="btn btn-default btn-xl">Gimmi the temps!</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">My skillset</h2>
-                    <hr class="primary">
-                    <p class="text-muted">(click the icons to learn more)</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="http://www.nytimes.com/2015/06/23/science/aphantasia-minds-eye-blind.html"><i class="fa fa-4x fa-eye-slash wow bounceIn text-primary"></i></a>
-                        <h3>Mind's Eye</h3>
-                        <p class="text-muted">I literally don't have one</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="http://na.op.gg/summoner/userName=hellb%C3%AAnt"><i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".1s"></i></a>
-                        <h3>Gaming as medicine</h3>
-                        <p class="text-muted">Current League of Legends dork (Former CS 1.6 Semi-Pro)</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="https://www.google.com/webhp?ion=1&espv=2&ie=UTF-8#q=5%20feet%2011%20inches"><i class="fa fa-4x fa-arrows-v wow bounceIn text-primary" data-wow-delay=".2s"></i></a>
-                        <h3>I'm 5'11"</h3>
-                        <p class="text-muted">Probably closer to 5'10"</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-github-alt wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Hairline steady</h3>
-                        <p class="text-muted">I though I'd be bald by now, but I'm not</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="nothing">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#nothing" class="portfolio-box">
-                        <img src="assets/nothing/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Nothing
-                                </div>
-                                <div class="project-name">
-                                    Something will go here
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>I work at New Relic</h2>
-                <a href="http://www.newrelic.com" class="btn btn-default btn-xl wow tada">New Relic!</a>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact Info</h2>
-                    <hr class="primary">
-                    <p></p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <a href="mailto:xbadbmx@gmail.com" i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a></i>
-                    <p>Possible the worst email handle, but it's mine.</a></p>
-                </div>
-                <div class="col-lg-4 text-center">
-                	<a href="https://www.facebook.com/rob.mcdonough" i class="fa fa-facebook fa-3x wow bounceIn"></a></i>
-                	<p>My Bernie Sanders 2016 soapbox</p>
-                </div>	
-                <div class="col-lg-4 text-center">
-                	<a href="https://www.linkedin.com/profile/view?id=AAIAAAzdOsQBxFyW2sYKBEnP_dlTz7QKeJ0_EaA" i class="fa fa-linkedin fa-3x wow bounceIn"></a></i>
-                	<p>Straight Business</p>
-                </div>	
-            </div>
-        </div>
-    </section>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/jquery.fittext.js"></script>
-    <script src="js/wow.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/creative.js"></script>
+<h2>WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
+BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
+<br>
+TWENTY SIXTEEN JULY THIRTITH FOUR O'CLOCK<br>
+OUR BACKYARD: FIFTY FOURTY N OBERLIN<br>
+PDX NINE SEVEN TWO ZERO THREE<br>
+<br>
+THANKS, BUT NO THANKS:<br> 
+CHILDREN<br>
+PETS<br>
+VUVUZELAS</h2>
 
 </body>
 
