--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -30,7 +30,7 @@ h2 {
 <h2>WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
 BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
 <br>
-TWENTY SIXTEEN JULY THIRTITH FOUR O'CLOCK<br>
+TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK<br>
 OUR BACKYARD: FIFTY FOURTY N OBERLIN<br>
 PDX NINE SEVEN TWO ZERO THREE<br>
 <br>
