--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -6,13 +6,13 @@ body {
     font-family: Helvetica, Arial, Sans-Serif;
     color: #ffffff;
     text-transform: uppercase;
-    
+    text-indent: 100px
     text-align: left;
     background-color: #000000
 }
 
 h1 {
-font-size: 40pt;
+    font-size: 40pt;
 
 }
 
@@ -20,24 +20,33 @@ h2 {
     font-size: 20pt;
 }
 
+h3 {
+    font-size: 6pt;
+}
+
+
 </style>
 </head>
 
 <body>
 
-<h1>ROBERT + JESS MCDONOUGH</h1> 
+    <h1>
+        ROBERT + JESS MCDONOUGH<br>
+    </h1>
+        
+        <h2>
+            WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
+            BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
 
-<h2>WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
-BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
-<br>
-TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK<br>
-OUR BACKYARD: FIFTY FOURTY N OBERLIN<br>
-PDX NINE SEVEN TWO ZERO THREE<br>
-<br>
-THANKS, BUT NO THANKS:<br> 
-CHILDREN<br>
-PETS<br>
-VUVUZELAS</h2>
+        <br>TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK
+        <br>OUR BACKYARD: FIFTY FOURTY N OBERLIN
+        <br>PDX NINE SEVEN TWO ZERO THREE<br>
+        <br>THANKS, BUT NO THANKS:<br> 
+        <br>CHILDREN
+        <br>PETS
+        <br>VUVUZELAS
+        
+        </h2>
 
 </body>
 
