--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -24,29 +24,36 @@ h3 {
     font-size: 6pt;
 }
 
+a:link, a:visited, a:hover, a:active    {
+    color:#ffffff; background-color:transparent; text-decoration:none
+}
+
+
 
 </style>
 </head>
 
 <body>
 
-    <h1>
-        ROBERT + JESS MCDONOUGH<br>
-    </h1>
+<h1>
+    ROBERT + JESS MCDONOUGH<br></h1>
         
-        <h2>
-            WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
-            BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
+<h2>
+    WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
+    BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
 
-        <br>TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK
-        <br>OUR BACKYARD: FIFTY FOURTY N OBERLIN
-        <br>PDX NINE SEVEN TWO ZERO THREE<br>
-        <br>THANKS, BUT NO THANKS:<br> 
-        <br>CHILDREN
-        <br>PETS
-        <br>VUVUZELAS
-        
-        </h2>
+    <br>TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK
+    <br>OUR BACKYARD: FIFTY FOURTY N OBERLIN
+    <br>PDX NINE SEVEN TWO ZERO THREE<br>
+    <br>THANKS, BUT NO THANKS:<br> 
+    <br>
+    <a href="http://www.mytuxedocatalog.com/wp-content/uploads/C9625.jpg"target="_blank">TUXEDO(S)</a>
+    <br>
+    <a href="http://i.huffpost.com/gen/1299321/thumbs/o-INFOGRAPHIC-COST-OF-RAISING-CHILD-900.jpg"target="_blank">CHILDREN</a>
+    <br>
+    <a href="https://www.youtube.com/watch?v=z_AbfPXTKms"target="_blank">PETS</a>
+    <br>VUVUZELAS
+</h2>
 
 </body>
 
