--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <style>
+
+heydork {
+    Hi friend! You've found me. I'm gonna like make this a little more functional 
+    with flask. But we needed to get this information out before it's too late
+}
+
 body {
     font-family: Helvetica, Arial, Sans-Serif;
     color: #ffffff;
     text-transform: uppercase;
-    text-indent: 100px
-    text-align: left;
     background-color: #000000
 }
 
@@ -36,7 +40,7 @@ a:link, a:visited, a:hover, a:active    {
 <body>
 
 <h1>
-    ROBERT + JESS MCDONOUGH<br></h1>
+    ROBERT <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+</a> JESS MCDONOUGH<br></h1>
         
 <h2>
     WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
