--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -40,7 +40,7 @@ a:link, a:visited, a:hover, a:active    {
 <body>
 
 <h1>
-    ROBERT <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+</a> JESS MCDONOUGH<br></h1>
+    ROBERT <a href="http://devinemiracles.com/twin-flames.html"target="_blank">&#x1f525;</a> JESS MCDONOUGH<br></h1>
         
 <h2>
     WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
