--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -35,6 +35,9 @@ a:link, a:visited, a:hover, a:active    {
 
 
 </style>
+<img src="http://i.imgur.com/bG98dzX.jpg?1"allign="center">
+
+
 </head>
 
 <body>
@@ -44,7 +47,7 @@ a:link, a:visited, a:hover, a:active    {
         
 <h2>
     WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
-    BUT WE’D LOVE TO HANGOUT AND TALK ABOUT IT<br>
+    BUT WE’D LOVE TO CELEBRATE ABOUT IT<br>
 
     <br>TWENTY SIXTEEN JULY THIRTIETH FOUR O'CLOCK
     <br>OUR BACKYARD: FIFTY FOURTY N OBERLIN
