--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -41,7 +41,7 @@ a:link, a:visited, a:hover, a:active    {
 
 <img src="http://i.imgur.com/bG98dzX.jpg?1"allign="center">
 <h1>
-    ROBERT <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+</a> JESS MCDONOUGH<br></h1>
+    BOB <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+ </a><a href="http://i.imgur.com/qe1QhzT.jpg?1"target="_blank">JESS MCDONOUGH</a><br></h1>
         
 <h2>
     WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
