--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -41,7 +41,7 @@ a:link, a:visited, a:hover, a:active    {
 
 <img src="http://i.imgur.com/bG98dzX.jpg?1"allign="center">
 <h1>
-    BOB <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+ </a><a href="http://i.imgur.com/qe1QhzT.jpg?1"target="_blank">JESS MCDONOUGH</a><br></h1>
+    ROB <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+ </a><a href="http://i.imgur.com/qe1QhzT.jpg?1"target="_blank">JESS MCDONOUGH</a><br></h1>
         
 <h2>
     WE ALREADY GOT HITCHED AT THE COURTHOUSE<br>
@@ -56,8 +56,8 @@ a:link, a:visited, a:hover, a:active    {
     <br>
     <a href="http://i.huffpost.com/gen/1299321/thumbs/o-INFOGRAPHIC-COST-OF-RAISING-CHILD-900.jpg"target="_blank">CHILDREN</a>
     <br>
-    <a href="https://www.youtube.com/watch?v=z_AbfPXTKms"target="_blank">PETS</a>
-    <br>VUVUZELAS
+    <a href="https://www.youtube.com/watch?v=z_AbfPXTKms"target="_blank">PET(S)</a>
+    <br>VUVUZELA(S)
 </h2>
 
 </body>
