--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -39,7 +39,7 @@ a:link, a:visited, a:hover, a:active    {
 
 <body>
 
-<img src="http://i.imgur.com/bG98dzX.jpg?1"allign="center">
+<img src="http://i.imgur.com/u1dALv2.jpg?1"allign="left"><img src="http://i.imgur.com/u1dALv2.jpg?1"allign="left">
 <h1>
     ROB <a href="http://devinemiracles.com/twin-flames.html"target="_blank">+ </a><a href="http://i.imgur.com/qe1QhzT.jpg?1"target="_blank">JESS MCDONOUGH</a><br></h1>
         
